# rcpsp_cf_ivfth

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codemeta.json  pyproject.toml  pytest.ini  rcpsp_cf_ivfth.py  run_tests.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: release-dispatch.yml  test.yml
docs/: _generate_api_md.py  api.md  index.md  usage.md
rcpsp_cf_ivfth/: .zenodo.json  __init__.py  codemeta.json  data.py  fuzzy.py  model.py  sensitivity.py  visualization.py
rcpsp_cf_ivfth/examples/: __init__.py  toy_instance.py
tests/: conftest.py  test_examples.py  test_model.py
